--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ python = "^3.10"
 black = {extras = ["jupyter"], version = "^23.7.0"}
 matplotlib = "^3.7.2"
 transformers = "^4.33.1"
-datasets = "^2.14.5"
+evaluate = "^0.4.0"
+rouge-score = "^0.1.2"
+sentencepiece = "^0.1.99"
+sacremoses = "^0.0.53"
+scikit-learn = "^1.3.1"
 
 
 [build-system]
