--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ rouge-score = "^0.1.2"
 sentencepiece = "^0.1.99"
 sacremoses = "^0.0.53"
 scikit-learn = "^1.3.1"
+nltk = "^3.8.1"
+datasets = "^2.14.5"
 
 
 [build-system]
